# BaiduPCS-Rust-android

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MODIFIED_FROM_UPSTREAM.md  NOTICE.txt  OPEN_SOURCE_PACKAGE_NOTES.md  README.md  docker-compose.dev.yml  docker-compose.image.yml  docker-compose.yml  rustfmt.toml
.github/workflows/: docker-publish.yml  release-binaries.yml  release-decrypt-cli.yml  release-docker-arm64.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/src/: android.rs  lib.rs  logging.rs  main.rs  runtime.rs  task_slot_pool.rs
backend/src/auth/: constants.rs  cookie_login.rs  mod.rs  qrcode.rs  session.rs  types.rs
backend/src/autobackup/: config.rs  error.rs  events.rs  manager.rs  mod.rs  persistence.rs  scan_cache.rs  task.rs  validation.rs
backend/src/autobackup/common/: mod.rs  temp_file.rs
backend/src/autobackup/priority/: mod.rs  policy.rs
backend/src/autobackup/record/: mod.rs  record_manager.rs
backend/src/autobackup/scheduler/: backup_scheduler.rs  change_aggregator.rs  mod.rs  poll_scheduler.rs  task_controller.rs
backend/src/autobackup/watcher/: file_watcher.rs  mod.rs
backend/src/common/: memory_monitor.rs  mod.rs  path_utils.rs  proxy.rs  proxy_fallback.rs  refresh_coordinator.rs  speed_anomaly_detector.rs  thread_stagnation_detector.rs
backend/src/config/: env_detector.rs  mod.rs  mount_detector.rs  path_validator.rs
backend/src/downloader/: chunk.rs  engine.rs  folder.rs  folder_manager.rs  manager.rs  mod.rs  progress.rs  scheduler.rs  task.rs
backend/src/encryption/: buffer_pool.rs  config_store.rs  export.rs  mod.rs  service.rs  snapshot.rs
backend/src/filesystem/: guard.rs  mod.rs  service.rs  types.rs
backend/src/netdisk/: client.rs  cloud_dl.rs  cloud_dl_monitor.rs  mod.rs  types.rs
backend/src/persistence/: folder.rs  history.rs  history_db.rs  manager.rs  metadata.rs  mod.rs  recovery.rs  types.rs  wal.rs
backend/src/server/: error.rs  mod.rs  state.rs
backend/src/server/events/: mod.rs  throttle.rs  types.rs
backend/src/server/handlers/: auth.rs  autobackup.rs  cloud_dl.rs  common.rs  config.rs  download.rs  encryption_export.rs  file.rs  filesystem.rs  folder_download.rs  mod.rs  runtime_status.rs  share.rs  transfer.rs  upload.rs
backend/src/server/websocket/: handler.rs  manager.rs  message.rs  mod.rs
backend/src/sign/: devuid.rs  locate.rs  mod.rs  share_sign.rs
backend/src/transfer/: manager.rs  mod.rs  task.rs  types.rs
backend/src/uploader/: block_list_comparator.rs  chunk.rs  conflict.rs  conflict_resolver.rs  engine.rs  folder.rs  health.rs  manager.rs  mod.rs  rapid_upload.rs  scan_manager.rs  scheduler.rs  task.rs
backend/src/web_auth/: error.rs  handlers.rs  middleware.rs  mod.rs  password.rs  rate_limiter.rs  recovery.rs  state.rs  store.rs  token.rs  totp.rs  types.rs
backend/tools/: rustc-host-wrapper.cmd  rustc_host_wrapper.py
config/: app.toml.example  config.example.json
decrypt-cli/: Cargo.toml
decrypt-cli/src/: cli.rs  decrypt_engine.rs  error.rs  file_parser.rs  key_loader.rs  main.rs  mapping_loader.rs  types.rs
docs/: windows-rust-build-policy.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  (+2 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs  server.rs
scripts/: apply_license_headers.py  build.sh  check_windows_rust_build_policy.ps1  deploy.sh  dev.sh  generate_open_source_assets.py  test.sh
tests/: integration_test.sh  performance_test.sh
(+98 files in other folders)
