[package]
name = "baidupcs-desktop"
version = "1.12.1"
description = "百度网盘桌面客户端"
authors = ["BaiduPCS-Rust Team"]
license = "Apache-2.0"
repository = "https://github.com/komorebiCarry/BaiduPCS-Rust"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "baidupcs_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
toml = "0.8"

baidu-netdisk-rust = { path = "../../backend" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
